--- a/package.json
+++ b/package.json
@@ -1,15 +1,38 @@
 {
-  "name": "typescript-sample",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "quizzy-match-api",
+  "version": "0.0.0",
+  "private": true,
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "npm run dev:env sst dev",
+    "build": "sst build",
+    "deploy": "sst deploy",
+    "remove": "npm run dev:env sst remove",
+    "console": "sst console",
+    "typecheck": "tsc --noEmit",
+    "typecheck:core": "cd packages/core && npm run typecheck",
+    "dev:env": "env-cmd -f .env.local --",
+    "test:core": "cd packages/core && npm run test"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "typescript": "^5.1.6"
-  }
+  "devDependencies": {
+    "@tsconfig/node18": "18.2.0",
+    "@types/node": "20",
+    "@typescript-eslint/eslint-plugin": "6.2.0",
+    "@typescript-eslint/parser": "6.2.0",
+    "aws-cdk-lib": "2.88.0",
+    "aws-sdk": "2.1424.0",
+    "constructs": "10.2.69",
+    "env-cmd": "10.1.0",
+    "eslint": "8.45.0",
+    "eslint-config-airbnb-base": "15.0.0",
+    "eslint-config-prettier": "8.9.0",
+    "eslint-plugin-import": "2.28.0",
+    "eslint-plugin-prettier": "5.0.0",
+    "prettier": "3.0.0",
+    "sst": "2.16.3",
+    "typescript": "5.1.6"
+  },
+  "workspaces": [
+    "packages/*"
+  ]
 }
